WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
11406
Crash in WebCore::FrameLoader::documentLoader()
https://bugs.webkit.org/show_bug.cgi?id=11406
Summary
Crash in WebCore::FrameLoader::documentLoader()
Matt Lilek
Reported
2006-10-24 12:53:22 PDT
Going to the URL above causes the latest nightlies to crash. Regressed between the
r17233
and
r17241
builds. This isn't specific to that page, but happens on any individual story on cbc.ca.
Attachments
crashlog
(20.00 KB, text/plain)
2006-10-24 12:54 PDT
,
Matt Lilek
no flags
Details
Patch to fix
(2.14 KB, patch)
2006-10-24 14:27 PDT
,
Brady Eidson
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2006-10-24 12:54:12 PDT
Created
attachment 11194
[details]
crashlog
Mark Rowe (bdash)
Comment 2
2006-10-24 13:12:42 PDT
I'm also seeing this on various different sites.
Brady Eidson
Comment 3
2006-10-24 14:19:24 PDT
In our quest to transition from ObjC to ObjC++ we're losing alot of the free "null checking" that messaging nil provided. This is one of those cases. I'll have a patch very soon
Brady Eidson
Comment 4
2006-10-24 14:27:03 PDT
Created
attachment 11195
[details]
Patch to fix Do come null check that is required now, whereas it was "free nil checking" in ObjC before
Anders Carlsson
Comment 5
2006-10-24 14:29:22 PDT
Comment on
attachment 11195
[details]
Patch to fix r=me
Brady Eidson
Comment 6
2006-10-24 14:31:35 PDT
Commited in
r17261
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug