        Reviewed by Anders

http://bugs.webkit.org/show_bug.cgi?id=11406 - Crash in [WebFrame dataSource]
        In the transition to ObjC++ we lost alot of our free nil checking that we must now do manually
        to prevent null dereferencing.

        * WebView/WebFrame.mm:
        (-[WebFrame provisionalDataSource]):
        (-[WebFrame dataSource]):



Canonical link: https://commits.webkit.org/14527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17261 268f45cc-cd09-0410-ab3c-d52691b4dbfc